[package]
name = "engine"
version = "0.1.0"
authors = ["Mica White <botahamec@outlook.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = {path = "../model"}
parking_lot = "0.12"
mimalloc = "0.1.39"

[dev-dependencies]
criterion = "0.5"