[package]
name = "engine"
version = "0.1.0"
authors = ["Mica White <botahamec@outlook.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = {path = "../model"}
byteorder = "1"
thiserror = "1"
parking_lot = "0.12"
arrayvec = "0.7"
mimalloc = "0.1.39"

[dev-dependencies]
criterion = "0.5"