[package]
name = "model"
version = "0.1.0"
authors = ["Mike White <botahamec@outlook.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", optional = true, features = ["derive"] }
rayon = "1"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"

[[bench]]
name = "bitboard"
harness = false